[Other] Added README.md, edited according to linter
